@@ -47,40 +47,47 @@ zwei separaten Listen:
         "checked_out": [
           {
             "icon_class": "icon-dokument_word is-checked-out-by-current-user",
+            "description": "Wichtige Dokumentation",
             "last_touched": "2018-05-31T15:40:23+02:00",
-            "target_url": "http://localhost:8080/fd/ordnungssystem/fuehrung/gemeinderecht/dossier-25/document-197",
+            "@id": "http://localhost:8080/fd/ordnungssystem/fuehrung/gemeinderecht/dossier-25/document-197",
+            "@type": "opengever.document.document",
             "title": "Datenschutzrichtlinien Muster AG",
-            "filename": "Datenschutzrichtlinien Muster AG.docx",
-            "checked_out": "peter.muster"
+            "review_state": "Datenschutzrichtlinien Muster AG.docx",
           },
           {
             "icon_class": "icon-dokument_excel is-checked-out-by-current-user",
+            "description": "",
             "last_touched": "2018-05-31T15:40:01+02:00",
-            "target_url": "http://localhost:8080/fd/ordnungssystem/fuehrung/gemeinderecht/dossier-25/document-191",
+            "@id": "http://localhost:8080/fd/ordnungssystem/fuehrung/gemeinderecht/dossier-25/document-191",
+            "@type": "opengever.document.document",
             "title": "Bilanz Muster AG 2018",
-            "filename": "Bilanz Muster AG 2018.xlsx",
-            "checked_out": "peter.muster"
+            "review_state": "Datenschutzrichtlinien Muster AG.docx",
           }
         ],
         "recently_touched": [
           {
             "icon_class": "icon-dokument_powerpoint is-checked-out",
+            "description": "",
             "last_touched": "2018-05-31T15:35:38+02:00",
-            "target_url": "http://localhost:8080/fd/ordnungssystem/fuehrung/gemeinderecht/dossier-18/document-229",
+            "@id": "http://localhost:8080/fd/ordnungssystem/fuehrung/gemeinderecht/dossier-18/document-229",
+            "@type": "opengever.document.document",
             "title": "Pra\u0308sentation - Firmenprofil Muster AG",
-            "filename": "Praesentation - Firmenprofil Muster AG.ppt",
-            "checked_out": "anderer.user"
+            "review_state": "Datenschutzrichtlinien Muster AG.docx",
           },
           {
             "...": ""
           },
           {
             "icon_class": "icon-dokument_word",
+            "description": "",
             "last_touched": "2018-05-31T15:34:42+02:00",
-            "target_url": "http://localhost:8080/fd/ordnungssystem/fuehrung/gemeinderecht/dossier-18/document-236",
+            "@id": "http://localhost:8080/fd/ordnungssystem/fuehrung/gemeinderecht/dossier-18/document-236",
+            "@type": "opengever.document.document",
             "title": "Anfrage Drei"
-            "filename": "Anfrage Drei.docx",
-            "checked_out": ""
+            "review_state": "Datenschutzrichtlinien Muster AG.docx",
           }
         ]
       }
+
+
+Die Repräsentation der Dokumente entspricht der :ref:`Summary Repräsentation von Inhalten <summaries>`, wie sie auch in anderen Feldern zum Einsatz kommt. Dabei wird auch der Parmater ``metadata_fields`` unterstützt, welches es erlaubt zusätzliche Felder abzufragen.
